# megatransformer

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  LICENSE  README.md  RESEARCH_TODO.md  anagrad.py  clean_ramfs.sh  config.py  count_model_params.py  custom_callbacks.py  custom_trainers.py  dataset_download.py  ds_config.json  ds_config_int8.json  ds_config_zero-1.json  ds_config_zero-2.json  ds_config_zero-3.json  evaluate_vocoder.py  finetune.py  interpolate_image_latents.py  isolation_testing.py  live.main.tex  megatransformer_utils.py  millions_moe.py  min_repro.py  multihead_attn.py  optuna.ipynb  per_lang_embedding.py  phi3_mlp.py  positionwise_fcn.py  preprocess_audio_diffusion_dataset.py  preprocess_audio_vae_dataset.py  preprocess_gubert_dataset.py  preprocess_gubert_feature_dataset.py  preprocess_image_diffusion_dataset.py  preprocess_image_vae_dataset.py  preprocess_speech_reconstruction_dataset.py  preprocess_vocoder_dataset.py  preprocess_world_model_dataset.py  (+36 more)
.claude/: settings.local.json
.claude/skills/sive-diagnostics/: SKILL.md
.claude/skills/smg-diagnostics/: SKILL.md
configs/: aiayn.yaml
configs/causal/: aiayn.yaml
configs/seq2seq/: aiayn.yaml
dataset_loading/: __init__.py  ai_gen_multimodal_dataset.py  audio_diffusion_dataset.py  audio_loading.py  audio_multimodal.py  generic.py  generic_text.py  generic_unprocessed.py  image_diffusion_dataset.py  image_loading.py  image_multimodal.py  image_vae_dataset.py  multimodal_dataset.py  vocoder_dataset.py  wikitext.py
docs/: TRAINING_GUIDELINES.md  architecture_diagram.tex  architecture_diagram_dit.tex  architecture_diagram_voice.tex
eval_output/baseline_248000_full/: speaker_leakage_results.json
eval_output/baseline_47500_full/: speaker_leakage_results.json
eval_output/baseline_49000_full/: speaker_leakage_results.json
eval_output/baseline_99500_full/: speaker_leakage_results.json
eval_output/baseline_nogrl_49000_full/: speaker_leakage_results.json
eval_output/covariancereg_248000_full/: speaker_leakage_results.json
eval_output/covariancereg_282000_full/: speaker_leakage_results.json
eval_output/covariancereg_49000_full/: speaker_leakage_results.json
eval_output/covariancereg_99500_full/: speaker_leakage_results.json
eval_output/mlp_probe_layer10_258500/: speaker_leakage_results.json
eval_output/mlp_probe_layer10_train_258500/: speaker_leakage_results.json
eval_output/speaker_leakage/: speaker_leakage_results.json
eval_output/speaker_leakage_3xdown_muon_wd_258500/: speaker_leakage_results.json
eval_output/stdhinge_248000_full/: speaker_leakage_results.json
eval_output/stdhinge_282000_full/: speaker_leakage_results.json
eval_output/stdhinge_49000_full/: speaker_leakage_results.json
eval_output/stdhinge_99500_full/: speaker_leakage_results.json
examples/: causal_lm.py  wmt14ende.py
examples/hf/: causal_lm.py  wmt14ende.py
examples/homebrew/causal_lm/: causal_lm.py
inference/: image_caption_gr.py  image_generate_gr.py  voice_caption_gr.py  voice_generate_gr.py
model/: __init__.py  activations.py  attention.py  causal.py  diffusion.py  ema.py  huginn_criteria.py  kv_cache.py  megatransformer.py  megatransformer_attn.py  megatransformer_audio_decoder.py  megatransformer_audio_encoder.py  megatransformer_blocks.py  megatransformer_causal.py  megatransformer_diffusion.py  megatransformer_ffn.py  megatransformer_image_decoder.py  megatransformer_image_encoder.py  megatransformer_modules.py  megatransformer_multimodal.py  megatransformer_recurrent.py  megatransformer_text_encoder.py  multimodal.py  norms.py  recurrent.py  recurrent_criteria.py  rmsnorm.py  vae.py
model/audio/: __init__.py  attention.py  criteria.py  diffusion.py  discriminators.py  feature_extractors.py  generators.py  gubert.py  shared_window_buffer.py  speech_reconstruction.py  vae.py  vocoders.py  wrappers.py
model/audio/vocoders/: convtranspose1d_vocoder.py  freq_domain_vocoder.py  upsample_vocoder.py  vocoders.py
model/image/: diffusion.py  discriminators.py  feature_extractors.py  generators.py  recurrent_vae.py  vae.py
model/text/: feature_extractors.py  generators.py
model/world/: kv_cache.py  recurrent.py  token_alignment.py  transformer.py  world_model.py
provision/: server_setup.yml
scripts/: add_notes.py  analyze_diffusion_architecture.py  analyze_diffusion_attention.py  analyze_dit_checkpoint.py  analyze_gubert_layers.py  compute_latent_stats.py  diagnose_diffusion.py  diagnose_overfitting.py  evaluate_vocoder.py  extract_speaker_embedding.py  gubert_cka.py  latent_distribution_analysis.py  latent_health.py  plot_activations.py  prune_vocoder.py  test_pruned.py  test_speaker_disentanglement.py
src/: test_sive.ipynb  test_vocoder.ipynb
src/backup/megatransformer/: config.py  criteria.py  (+5 more)
src/config/: common.py
src/megatransformer/: config.py  criteria.py  custom_trainers.py  grokfast.py  grouped_query_attn.py  infini_multihead_attn.py  infinite_multihead_attn.py  lr_scheduler.py  megatransformer.py  megatransformer_utils.py  millions_moe.py  mult.py  multihead_attn.py  phi3_mlp.py  positionwise_fcn.py  sparse_moe.py  train.py  transformer_utils.py  visualization_helper.py
src/model/: activations.py  discriminator.py  ema.py  recurrent_criteria.py  sinusoidal_positional_encoding.py  transformer.py
src/scripts/: extract_speaker_embedding.py
src/utils/: constants.py  megatransformer_utils.py  metrics.py  metrics_backend.py  model_loading_utils.py  speaker_encoder.py  text_encoder.py  train_utils.py  visualization.py  voice_silence_mask.py  wandb_backend.py
tests/: test_collator_token_placement.py  test_gubert.py  test_gubert_feature_vae.py  test_preprocess_gubert_dataset.py  test_preprocess_world_model_dataset.py  test_speech_reconstruction.py  test_speech_reconstruction_losses.py  test_text_preprocess_packing.py  test_text_target_alignment.py  test_token_alignment.py  test_voice_direction_split.py  test_world_model.py
utils/: audio_utils.py  configuration.py  megatransformer_utils.py  model_loading_utils.py  model_utils.py  speaker_encoder.py  training_utils.py
(+273 files in other folders)
