[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "megatransformer"
version = "0.1.0"
description = "Multimodal transformer research models (SIVE, SMG, vocoder, world model)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
# Core, INTENTIONALLY UNPINNED library deps: everything a downstream consumer
# (e.g. the ComfyUI SIVE/ContentVec->SMG inference nodes) needs to `import
# megatransformer` and run inference. The torch FAMILY (torch/torchaudio/
# torchvision) is deliberately kept OUT of here so a plain `pip install
# megatransformer` never clobbers a host env's existing CUDA torch — the
# training node gets torch via the uv `training` dependency-group instead.
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "matplotlib",
    "transformers",
    "huggingface-hub",
    "safetensors",
    "librosa",
    "speechbrain",
    "torchcrepe",
    "pyctcdecode",
    "sentencepiece",   # required by the Mistral tokenizer (not auto-installed by transformers)
    "protobuf",        # ditto (tokenizer conversion)
    "rotary-embedding-torch",
]

[project.optional-dependencies]
# Image VAE (LiteVAE) preprocessing + image-synthesis eval. Not needed for the
# voice/SMG/world path. torchvision here resolves from the cu124 index too.
# NOTE: image-VAE preprocessing also needs `olvae` (open-litevae), which is a
# local, manually-packaged checkout with no reproducible source yet — install it
# separately where you have it: `uv pip install -e ../open-litevae`. It is kept
# OUT of the deps so a fresh node without that checkout can `uv sync` (a local
# path source is validated even when the extra is unselected, which breaks sync).
image = [
    "torchvision",
    "pillow",
    "lpips",
    "open-clip-torch",
    "torchmetrics",
    "omegaconf",
]
# Gradio eval demos (voice_clone, etc.).
demo = [
    "gradio",
]

[project.urls]
Repository = "https://github.com/Mekadrom/megatransformer"

# ---------------------------------------------------------------------------
# uv-specific config (IGNORED by pip — a downstream `pip install megatransformer`
# never sees any of this, so the library stays installable in non-uv venvs).
# ---------------------------------------------------------------------------

# Training-node deps. PEP 735 dependency-groups are LOCAL-only (never published
# in the wheel metadata), so torch et al. reach the training node via `uv sync`
# but are invisible to a downstream `pip install megatransformer`.
[dependency-groups]
training = [
    "torch",
    "torchaudio",
    "accelerate",
    "datasets>=2.19,<3",
    "tensorboard",
    "wandb",
    "jiwer",
    "openai-whisper",
    "scikit-learn",
    "psutil",
    "requests",
]
dev = [
    "pytest",
]
deepspeed = [
    "deepspeed"
]

[tool.uv]
# `uv sync` installs these groups by default (the full training environment).
default-groups = ["training", "dev", "deepspeed"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
# open-litevae (olvae) is intentionally NOT declared here: it's a local,
# manually-packaged checkout, and a path source is validated on every `uv sync`
# even on nodes that don't have it (breaking sync). Install it manually where
# needed (`uv pip install -e ../open-litevae`); once forked+pushed, add it back
# as a git source in the [image] extra to make image-VAE preprocessing reproducible.

# src-layout: the importable package `megatransformer` lives under src/.
# `pip install -e .` (or `uv sync`) then makes `import megatransformer.model.smg.smg` work.
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["megatransformer*"]
